--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ decorator==5.0.5
 Django==3.2
 django-environ==0.4.5
 environ==1.0
+gunicorn==20.1.0
 ipython==7.22.0
 ipython-genutils==0.2.0
 jedi==0.18.0
@@ -19,3 +20,4 @@ pytz==2021.1
 sqlparse==0.4.1
 traitlets==5.0.5
 wcwidth==0.2.5
+whitenoise==5.2.0
